<resources>

    <string name="app_name">Idiomas</string>

    <string name="azul">Azul</string>
    <string name="rojo">Rojo</string>
    <string name="verde">Verde</string>
    <string name="amarillo">Amarillo</string>
    <string name="rosa">Rosa</string>
    <string name="morado">Morado</string>
    <string name="naranja">Naranja</string>
    <string name="marron">Marrón</string>
    <string name="gris">Gris</string>
    <string name="negro">Negro</string>
    <string name="blanco">Blanco</string>
    <string name="tv_colores">Colores</string>

    <string name="azul_c"> 파란색 </string>
    <string name="rojo_c">빨간색</string>
    <string name="verde_c">초록색</string>
    <string name="amarillo_c">노란색</string>
    <string name="rosa_c">분홍색</string>
    <string name="morado_c">보라색</string>
    <string name="naranja_c">주황색</string>
    <string name="marron_c">갈색</string>
    <string name="gris_c">회색</string>
    <string name="negro_c">검은색</string>
    <string name="blanco_c"> 하얀색</string>

    <string name="azul_i">Blue</string>
    <string name="rojo_i">Red</string>
    <string name="verde_i">Green</string>
    <string name="amarillo_i">Yellow</string>
    <string name="rosa_i">Pink</string>
    <string name="morado_i">Purple</string>
    <string name="naranja_i">Orange</string>
    <string name="marron_i">Brown</string>
    <string name="gris_i">Grey</string>
    <string name="negro_i">Black</string>
    <string name="blanco_i">White</string>

    <string name="tv_dias">Días de la semana</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>

    <string name="lunes_c">월요일</string>
    <string name="martes_c">화요일</string>
    <string name="miercoles_c">수요일</string>
    <string name="jueves_c">목요일</string>
    <string name="viernes_c">금요일</string>
    <string name="sabado_c">토요일</string>
    <string name="domingo_c">일요일</string>

    <string name="lunes_i">Monday</string>
    <string name="martes_i">Tuesday</string>
    <string name="miercoles_i">Wednesday</string>
    <string name="jueves_i">Thursday</string>
    <string name="viernes_i">Friday</string>
    <string name="sabado_i">Saturday</string>
    <string name="domingo_i">Sunday</string>

    <string name="tv_numeros">Números</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="diez">10</string>

    <string name="uno_i">ONE</string>
    <string name="dos_i">TWO</string>
    <string name="tres_i">THREE</string>
    <string name="cuatro_i">FOUR</string>
    <string name="cinco_i">FIVE</string>
    <string name="seis_i">SIX</string>
    <string name="siete_i">SEVEN</string>
    <string name="ocho_i">EIGHT</string>
    <string name="nueve_i">NINE</string>
    <string name="diez_i">TEN</string>

    <string name="tv_opcion_numeros">Selecciona un sistema numérico</string>

    <string name="sinoCoreanos">Números sino-coreanos</string>
    <string name="uno_sc">일</string>
    <string name="dos_sc">이</string>
    <string name="tres_sc">삼</string>
    <string name="cuatro_sc">사</string>
    <string name="cinco_sc">오</string>
    <string name="seis_sc">륙</string>
    <string name="siete_sc">칠</string>
    <string name="ocho_sc">팔</string>
    <string name="nueve_sc">구</string>
    <string name="diez_sc">십</string>

    <string name="nativoCoreanos">Números nativo-coreanos</string>

    <string name="bt_siguiente">Siguiente</string>
    <string name="tv_texto">Textooooo</string>
    <string name="tv_idioma">Selecciona un idioma</string>
    <string name="tv_opcion">Selecciona una opción</string>
    <string name="bt_jugar">JUGAR</string>
    <string name="bt_aprender">APRENDER</string>

    <string name="bt_saber_mas"> Saber más...</string>
    <string name="informacion_sino">Está basado en el idioma Chino (Sino-Coreano).
        Los números sino-coreanos se usan para decir los números de teléfono, contar dinero, decir minutos, y en general todos aquellos números que no siguen un orden secuencial.
        También se usan para números altos cuando estos siguen un orden secuencial</string>
    <string name="informacion_nativos">Se usan para contar cosas que siguen un orden secuencial (1,2,3,4,5..), cuando pedimos en un restaurante, cuando compramos múltiples cosas en una tienda, cuando hablamos de la edad, y cuando decimos las horas (NO LOS MINUTOS, SÓLO LAS HORAS).
        Cuando los números son altos se suele recurrir a los números sino-coreanos por su simplicidad.</string>

    <string name="tv_titulo">INFORMARCIÓN SOBRE LA APP</string>
    <string name="tv_info">Las nuevas tecnologías llevan años revolucionando nuestra manera de ver y entender el mundo. Con la era digital, son pocas las cosas que hoy en día hacemos de forma tradicional, ya que vivimos como si el móvil fuera una parte más de nuestro cuerpo. Aprender idiomas entra dentro de esa lista.  Saber idiomas es cada vez más necesario en la economía global en la que nos movemos, sobre todo si tenemos en cuenta cuánto tardan algunas aplicaciones y sistemas en estar disponible en español. Por supuesto, también suponen cierta ventaja a la hora de buscar un trabajo o educación.
Aprender y dominar un idioma es un proceso que toma tiempo, un buen material y mucha práctica. Por suerte, en tu móvil tienes un gran aliado para acompañarte en tu aprendizaje, ampliar tu vocabulario, mejorar tu pronunciación o practicar la gramática no solo del inglés sino de otros muchos idiomas. Esta es una de las mejores aplicaciones para ello</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">Bienvenido</string>
    <string name="invalid_username">Usuario inválido</string>
    <string name="invalid_password">La contraseña debe contener más de 5 caracteres</string>
    <string name="login_failed">Imposible conectar</string>

</resources>
