<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_colores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tv_numeros"
        android:textColor="#9FA8DA"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tl_contenedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginRight="80dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="5dp">

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/uno"
                android:textColor="#00BFA5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_1_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uno_i"
                android:textColor="#00BFA5"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/dos"
                android:textColor="#FF6D00"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_2_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos_i"
                android:textColor="#FF6D00"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/tres"
                android:textColor="#AA00FF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_3_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres_i"
                android:textColor="#AA00FF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/cuatro"
                android:textColor="#FFAB00"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_4_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro_i"
                android:textColor="#FFAB00"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/cinco"
                android:textColor="#FF80AB"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_5_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco_i"
                android:textColor="#FF80AB"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/seis"
                android:textColor="#00838F"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_6_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seis_i"
                android:textColor="#00838F"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/siete"
                android:textColor="#C62828"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_7_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siete_i"
                android:textColor="#C62828"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/ocho"
                android:textColor="#283593"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_8_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocho_i"
                android:textColor="#283593"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/nueve"
                android:textColor="#4CAF50"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_9_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nueve_i"
                android:textColor="#4CAF50"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/diez"
                android:textColor="#FF5722"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_10_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diez_i"
                android:textColor="#FF5722"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>