<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_dias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dias"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tl_contenedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="5dp">

        <TableRow
            android:id="@+id/fila1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tv_lunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lunes"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_lunes_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/lunes_c"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/fila2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tv_martes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/martes"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_martes_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/martes_c"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/fila3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tv_miercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/miercoles"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_miercoles_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miercoles_c"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/fila4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tv_jueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/jueves"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_jueves_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jueves_c"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/fila5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tv_viernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/viernes"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_viernes_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viernes_c"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/fila6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tv_sabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sabado"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_sabado_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabado_c"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/fila7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/domingo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_domingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domingo_c"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>
</LinearLayout>